--- a/Site/public/404.html
+++ b/Site/public/404.html
@@ -20,7 +20,7 @@
     <meta name="description"
   content="" />
 <meta name="keywords"
-  content='blog, google analytics' />
+  content='' />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="http://localhost:1313/404.html" />
 
