--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -21,7 +21,7 @@
     <meta name="description"
   content="" />
 <meta name="keywords"
-  content='blog, google analytics' />
+  content='' />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="http://localhost:1313/" />
 
@@ -66,7 +66,7 @@
   <header class="Header js-details-container Details px-3 px-md-4 px-lg-5 flex-wrap flex-md-nowrap open Details--on">
     <div class="Header-item mobile-none" style="margin-top: -4px; margin-bottom: -4px;">
       <a class="Header-link" href="http://localhost:1313/">
-        <img class="octicon" height="32" width="32" src="/images/GitHub-Mark-Light-32px.png">
+        <img class="octicon" height="32" width="32" src="/images/github-mark-white.png">
       </a>
     </div>
     <div class="Header-item d-md-none">
@@ -364,7 +364,7 @@
                   </path>
                 </svg>
                 
-                <a rel="nofollow me" class="link-gray-dark" href="http://localhost:1313/">http://localhost:1313/</a>
+                <a rel="nofollow me" class="link-gray-dark" href="nebelnite.github.io">nebelnite.github.io</a>
                 
               </li>
             </ul>
